[package]
name = "ppcalc_apiv1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.5.1"
lazy_static = "1.4.0"
reqwest = { version = "0.11.18", features = ["default", "blocking", "json"]}
serde = { version = "1.0.183", features = ["derive"]}

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 0